entrega index con bootstrap

--- a/nuestrocentro.html
+++ b/nuestrocentro.html
@@ -91,12 +91,12 @@
     </header>
     <main class="container-fluid main">
       <div class="row section1">
-        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+        <div class="col-12">
           <h4>
             Somos un centro de alta complejidad dedicados al diagnostico y
             tratamiento de patologías oftalmológicas.
           </h4>
-        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+          <div class="col-12">
           <h4>
             Tratamos patologías tales como: Miopía, Catarata, Opacificación
             Capsular, Astigmatismo, Hipermetropia, Presbicia, Chalazión,
@@ -104,13 +104,13 @@
             Degeneracion macular.
           </h4>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+        <div class="col-12">
           <h4>
             Contamos con equipamientos de última tecnología y con un equipo
             médico calificado de gran trayectoria y calidez.
           </h4>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+        <div class="col-12">
           <h4>
             Atendemos a pacientes de todo el país y contamos con un sistema
             integral de agendamiento de turnos e historia clínica.
@@ -118,7 +118,7 @@
         </div>
         </section>
       </div>
-      <div class="row">
+      <div class="row section2">
       <div class="col-12">
       <div
         id="carouselExampleSlidesOnly"
@@ -138,7 +138,7 @@
         </div>
       </div>
     </div>
-    </div>
+  </div>
     </main>
     <footer class="footer container-fluid">
       <div class="row footerRow">
