entrega index con bootstrap

--- a/especialidades.html
+++ b/especialidades.html
@@ -90,9 +90,9 @@
       </nav>
     </header>
     <main class="container-fluid main">
-      <div class="row">
-        <h2>RETINA</h2>
+      <div class="row section1">
         <div class="col-12 especialidad">
+          <h2>RETINA</h2>
           <div>
             <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
             <h3>Dr/Dra. APELLIDO, Nombre</h3>
@@ -113,9 +113,9 @@
           </div>
         </div>
       </div>
-      <div class="row">
-        <h2>GLAUCOMA</h2>
+      <div class="row section1">
         <div class="col-12 especialidad">
+          <h2>GLAUCOMA</h2>
           <div>
             <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
             <h3>Dr/Dra. APELLIDO, Nombre</h3>
@@ -130,9 +130,9 @@
           </div>
         </div>
       </div>
-      <div class="row">
-        <h2>CÓRNEA Y CATARATAS</h2>
+      <div class="row section1">
         <div class="col-12 especialidad">
+          <h2>CÓRNEA Y CATARATAS</h2>
           <div>
             <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
             <h3>Dr/Dra. APELLIDO, Nombre</h3>
@@ -147,9 +147,9 @@
           </div>
         </div>
       </div>
-      <div class="row">
-        <h2>UVEÍTIS</h2>
+      <div class="row section1">
         <div class="col-12 especialidad">
+          <h2>UVEÍTIS</h2>
           <div>
             <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
             <h3>Dr/Dra. APELLIDO, Nombre</h3>
@@ -158,9 +158,9 @@
           </div>
         </div>
       </div>
-      <div class="row">
-        <h2>SUPERFICIE OCULAR</h2>
+      <div class="row section1">
         <div class="col-12 especialidad">
+          <h2>SUPERFICIE OCULAR</h2>
           <div>
             <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
             <h3>Dr/Dra. APELLIDO, Nombre</h3>
@@ -181,9 +181,9 @@
           </div>
         </div>
       </div>
-      <div class="row">
-        <h2>ESTRABISMO</h2>
+      <div class="row section1">
         <div class="col-12 especialidad">
+          <h2>ESTRABISMO</h2>
           <div>
             <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
             <h3>Dr/Dra. APELLIDO, Nombre</h3>
@@ -192,9 +192,9 @@
           </div>
         </div>
       </div>
-      <div class="row">
-        <h2>VÍAS LAGRIMALES Y PLÁSTICA OCULAR</h2>
+      <div class="row section1">
         <div class="col-12 especialidad">
+          <h2>VÍAS LAGRIMALES Y PLÁSTICA OCULAR</h2>
           <div>
             <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
             <h3>Dr/Dra. APELLIDO, Nombre</h3>
@@ -203,9 +203,9 @@
           </div>
         </div>
       </div>
-      <div class="row">
-        <h2>NEUROOFTALMOLOGÍA</h2>
+      <div class="row section1">
         <div class="col-12 especialidad">
+          <h2>NEUROOFTALMOLOGÍA</h2>
           <div>
             <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
             <h3>Dr/Dra. APELLIDO, Nombre</h3>
@@ -214,9 +214,9 @@
           </div>
         </div>
       </div>
-      <div class="row">
-        <h2>BAJA VISIÓN</h2>
+      <div class="row section1">
         <div class="col-12 especialidad">
+          <h2>BAJA VISIÓN</h2>
           <div>
             <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
             <h3>Dr/Dra. APELLIDO, Nombre</h3>
