entrega index con bootstrap

--- a/estudios.html
+++ b/estudios.html
@@ -92,15 +92,19 @@
     <main class="container-fluid main">
       <div class="row">
         <div class="col-12">
-          <h2>OCT</h2>
-          <h2>UBM</h2>
-          <h2>Paquimetría corneal</h2>
-          <h2>Topografía corneal</h2>
-          <h2>Microscopía especular</h2>
-          <h2>AutoLensometro digital</h2>
-          <h2>IOL master</h2>
-          <h2>Ecometría</h2>
-          <h2>Campovisual Humphrey</h2>
+          <div class="mainTxt">
+            <div>
+              <h2>OCT</h2>
+              <h2>UBM</h2>
+              <h2>Paquimetría corneal</h2>
+              <h2>Topografía corneal</h2>
+              <h2>Microscopía especular</h2>
+              <h2>AutoLensometro digital</h2>
+              <h2>IOL master</h2>
+              <h2>Ecometría</h2>
+              <h2>Campovisual Humphrey</h2>
+            </div>
+          </div>
         </div>
       </div>
     </main>
