--- a/nuestrocentro.html
+++ b/nuestrocentro.html
@@ -142,21 +142,17 @@
     </main>
     <footer class="footer container-fluid">
       <div class="row footerRow">
-        <div class="col-lg-4 col-md-4 col-xs-12 footer-brand">
-          <a href="index.html">
-            <img
-              class="logo-brand"
-              src="./img/logo_transparente.png"
-              alt="logo"
-            />
-          </a>
-        </div>
-        <div class="col-lg-4 col-md-4 col-xs-12 footer-copywrite">
-          <h2>
-            © 2021 - Todos los derechos reservados. By Michelle Ticchetti.
-          </h2>
-        </div>
-        <div class="col-lg-4 col-md-4 col-xs-12 footer-rrss">
+       <div class="col-lg-4 col-md-4 col-xs-12 footer-brand">
+        <a href="index.html">
+          <img class="logo-brand" src="./img/logo_transparente.png" alt="logo" />
+        </a>
+      </div>
+      <div class="col-lg-4 col-md-4 col-xs-12 footer-copywrite">
+        <h2>
+          © 2021 - Todos los derechos reservados. By Michelle Ticchetti.
+        </h2>
+      </div>
+      <div class=" col-lg-4 col-md-4 col-xs-12 footer-rrss">
           <a href="https://www.facebook.com/">
             <img class="logo-rrss" src="./img/fb_logo.png" alt="fb_logo" />
           </a>
@@ -164,11 +160,7 @@
             <img class="logo-rrss" src="./img/ig_logo.png" alt="ig_logo" />
           </a>
           <a href="https://www.youtube.com">
-            <img
-              class="logo-rrss"
-              src="./img/youtube_logo.png"
-              alt="ytube_logo"
-            />
+            <img class="logo-rrss" src="./img/youtube_logo.png" alt="ytube_logo" />
           </a>
           <a href="https://www.whatsapp.com">
             <img
@@ -179,8 +171,7 @@
           </a>
         </div>
       </div>
-    </div>
-    </footer>
+      </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
