--- a/portal.html
+++ b/portal.html
@@ -89,7 +89,7 @@
         </div>
       </nav>
     </header>
-    <main>
+    <main class="container-fluid main">
       <form action="#" class="form">
         <legend>LOGIN</legend>
         <div class="form__inputsText">
