--- a/estudios.html
+++ b/estudios.html
@@ -92,25 +92,27 @@
     <main class="container-fluid main">
       <div class="row">
         <div class="col-12">
-          <div class="mainTxt">
-            <div>
-              <h2>OCT</h2>
-              <h2>UBM</h2>
-              <h2>Paquimetría corneal</h2>
-              <h2>Topografía corneal</h2>
-              <h2>Microscopía especular</h2>
-              <h2>AutoLensometro digital</h2>
-              <h2>IOL master</h2>
-              <h2>Ecometría</h2>
-              <h2>Campovisual Humphrey</h2>
-            </div>
+          <div class="col-12 text-center">
+            <h2>ESTUDIOS</h2>
+            <ul>
+              <li>OCT</li>
+              <li>UBM</li>
+              <li>Paquimetría corneal</li>
+              <li>Topografía corneal</li>
+              <li>Microscopía especular</li>
+              <li>AutoLensometro digital</li>
+              <li>IOL master</li>
+              <li>Ecometría</li>
+              <li>Campovisual Humphrey</li>
+            </ul>
           </div>
         </div>
       </div>
     </main>
+    <section class="banner"></section>
     <footer class="footer container-fluid">
       <div class="row footerRow">
-        <div class="col-lg-4 col-md-4 col-xs-12 footer-brand">
+        <div class="col-2 footer-brand">
           <a href="index.html">
             <img
               class="logo-brand"
@@ -119,32 +121,40 @@
             />
           </a>
         </div>
-        <div class="col-lg-4 col-md-4 col-xs-12 footer-copywrite">
+        <div class="col-2 footer-copywrite">
           <h2>
             © 2021 - Todos los derechos reservados. By Michelle Ticchetti.
           </h2>
         </div>
-        <div class="col-lg-4 col-md-4 col-xs-12 footer-rrss">
-          <a href="https://www.facebook.com/">
-            <img class="logo-rrss" src="./img/fb_logo.png" alt="fb_logo" />
-          </a>
-          <a href="https://www.instagram.com">
-            <img class="logo-rrss" src="./img/ig_logo.png" alt="ig_logo" />
-          </a>
-          <a href="https://www.youtube.com">
-            <img
-              class="logo-rrss"
-              src="./img/youtube_logo.png"
-              alt="ytube_logo"
-            />
-          </a>
-          <a href="https://www.whatsapp.com">
-            <img
-              class="logo-rrss"
-              src="./img/whatsapp_logo.png"
-              alt="whatsapp_logo"
-            />
-          </a>
+        <div class="col-8 footer-rrss">
+          <div>
+            <a href="https://www.facebook.com/">
+              <img class="logo-rrss" src="./img/fb_logo.png" alt="fb_logo" />
+            </a>
+          </div>
+          <div>
+            <a href="https://www.instagram.com">
+              <img class="logo-rrss" src="./img/ig_logo.png" alt="ig_logo" />
+            </a>
+          </div>
+          <div>
+            <a href="https://www.youtube.com">
+              <img
+                class="logo-rrss"
+                src="./img/youtube_logo.png"
+                alt="ytube_logo"
+              />
+            </a>
+          </div>
+          <div>
+            <a href="https://www.whatsapp.com">
+              <img
+                class="logo-rrss"
+                src="./img/whatsapp_logo.png"
+                alt="whatsapp_logo"
+              />
+            </a>
+          </div>
         </div>
       </div>
     </footer>
