--- a/index.html
+++ b/index.html
@@ -206,26 +206,33 @@
   </main>
   <footer class="footer container-fluid">
     <div class="row footerRow">
-     <div class="col-lg-4 col-md-4 col-xs-12 footer-brand">
+     <div class="col-2 footer-brand">
       <a href="index.html">
         <img class="logo-brand" src="./img/logo_transparente.png" alt="logo" />
       </a>
     </div>
-    <div class="col-lg-4 col-md-4 col-xs-12 footer-copywrite">
+    <div class="col-2 footer-copywrite">
       <h2>
         © 2021 - Todos los derechos reservados. By Michelle Ticchetti.
       </h2>
     </div>
-    <div class=" col-lg-4 col-md-4 col-xs-12 footer-rrss">
-        <a href="https://www.facebook.com/">
+    <div class=" col-8 footer-rrss">
+      <div>  
+      <a href="https://www.facebook.com/">
           <img class="logo-rrss" src="./img/fb_logo.png" alt="fb_logo" />
         </a>
+      </div>
+      <div> 
         <a href="https://www.instagram.com">
           <img class="logo-rrss" src="./img/ig_logo.png" alt="ig_logo" />
         </a>
+      </div>
+      <div> 
         <a href="https://www.youtube.com">
           <img class="logo-rrss" src="./img/youtube_logo.png" alt="ytube_logo" />
         </a>
+      </div>
+      <div> 
         <a href="https://www.whatsapp.com">
           <img
             class="logo-rrss"
@@ -233,6 +240,7 @@
             alt="whatsapp_logo"
           />
         </a>
+      </div>
       </div>
     </div>
     </footer>
