--- a/portal.html
+++ b/portal.html
@@ -90,29 +90,51 @@
       </nav>
     </header>
     <main class="container-fluid main">
-      <form action="#" class="form">
-        <legend>LOGIN</legend>
-        <div class="form__inputsText">
-          <label for="user"></label>
-          <input id="user" name="user" placeholder="Usuario" type="text" />
-          <label for="pass"></label>
-          <input id="pass" name="pass" placeholder="Contraseña" type="text" />
+      <div class="row">
+        <div class="col-lg-3 col-md-2 col-xs-12 form-container">
+          <form class="formulario">
+            <div class="mb-3">
+              <label for="exampleInputEmail1" class="form-label">Usuario</label>
+              <input
+                type="email"
+                class="form-control"
+                id="exampleInputEmail1"
+                aria-describedby="emailHelp"
+              />
+              <div id="emailHelp" class="form-text">Número de Paciente</div>
+            </div>
+            <div class="mb-3">
+              <label for="exampleInputPassword1" class="form-label"
+                >Contraseña</label
+              >
+              <input
+                type="password"
+                class="form-control"
+                id="exampleInputPassword1"
+              />
+            </div>
+            <div class="mb-3 form-check">
+              <input
+                type="checkbox"
+                class="form-check-input"
+                id="exampleCheck1"
+              />
+              <label class="form-check-label" for="exampleCheck1"
+                >Recordame</label
+              >
+            </div>
+            <button type="submit" class="btn btn-primary">Ingresar</button>
+            <div class="form--forgetPass">
+              <h3>¿Olvidaste la contraseña?</h3>
+              <h3>¿No tenés una cuenta? Registrate</h3>
+            </div>
+          </form>
         </div>
-        <div class="form__button">
-          <button type="submit">ENVIAR</button>
-        </div>
-        <div class="form__checkbox">
-          <input type="checkbox" /> <label>Recordame</label>
-        </div>
-        <div class="form__forgetPass">
-          <h3>¿Olvidaste la contraseña?</h3>
-          <h3>¿No tienes cuenta? Registrate</h3>
-        </div>
-      </form>
+      </div>
     </main>
     <footer class="footer container-fluid">
       <div class="row footerRow">
-        <div class="col-lg-4 col-md-4 col-xs-12 footer-brand">
+        <div class="col-2 footer-brand">
           <a href="index.html">
             <img
               class="logo-brand"
@@ -121,32 +143,40 @@
             />
           </a>
         </div>
-        <div class="col-lg-4 col-md-4 col-xs-12 footer-copywrite">
+        <div class="col-2 footer-copywrite">
           <h2>
             © 2021 - Todos los derechos reservados. By Michelle Ticchetti.
           </h2>
         </div>
-        <div class="col-lg-4 col-md-4 col-xs-12 footer-rrss">
-          <a href="https://www.facebook.com/">
-            <img class="logo-rrss" src="./img/fb_logo.png" alt="fb_logo" />
-          </a>
-          <a href="https://www.instagram.com">
-            <img class="logo-rrss" src="./img/ig_logo.png" alt="ig_logo" />
-          </a>
-          <a href="https://www.youtube.com">
-            <img
-              class="logo-rrss"
-              src="./img/youtube_logo.png"
-              alt="ytube_logo"
-            />
-          </a>
-          <a href="https://www.whatsapp.com">
-            <img
-              class="logo-rrss"
-              src="./img/whatsapp_logo.png"
-              alt="whatsapp_logo"
-            />
-          </a>
+        <div class="col-8 footer-rrss">
+          <div>
+            <a href="https://www.facebook.com/">
+              <img class="logo-rrss" src="./img/fb_logo.png" alt="fb_logo" />
+            </a>
+          </div>
+          <div>
+            <a href="https://www.instagram.com">
+              <img class="logo-rrss" src="./img/ig_logo.png" alt="ig_logo" />
+            </a>
+          </div>
+          <div>
+            <a href="https://www.youtube.com">
+              <img
+                class="logo-rrss"
+                src="./img/youtube_logo.png"
+                alt="ytube_logo"
+              />
+            </a>
+          </div>
+          <div>
+            <a href="https://www.whatsapp.com">
+              <img
+                class="logo-rrss"
+                src="./img/whatsapp_logo.png"
+                alt="whatsapp_logo"
+              />
+            </a>
+          </div>
         </div>
       </div>
     </footer>
