arreglo en footer y portal

--- a/estudios.html
+++ b/estudios.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./stylesheet/generalstyle.css" />
-    <link rel="stylesheet" href="./stylesheet/estudios.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
-    <title>CENTINO - Estudios</title>
+    <link rel="stylesheet" href="./stylesheet/generalstyle.css" />
+    <link rel="stylesheet" href="./stylesheet/estudios.css" />
+    <title>CENTINO - Cirugías</title>
   </head>
   <body>
     <header>
@@ -90,22 +90,20 @@
       </nav>
     </header>
     <main class="container-fluid main">
-      <div class="row">
-        <div class="col-12">
-          <div class="col-12 text-center">
-            <h2>ESTUDIOS</h2>
-            <ul>
-              <li>OCT</li>
-              <li>UBM</li>
-              <li>Paquimetría corneal</li>
-              <li>Topografía corneal</li>
-              <li>Microscopía especular</li>
-              <li>AutoLensometro digital</li>
-              <li>IOL master</li>
-              <li>Ecometría</li>
-              <li>Campovisual Humphrey</li>
-            </ul>
-          </div>
+      <div class="row justify-content-between sectionPpal">
+        <div class="col-lg-2 col-md-2 col-xs-12 text-center">
+          <h2>Estudios</h2>
+          <ul class="text-center">
+            <li>OCT</li>
+            <li>UBM</li>
+            <li>Paquimetría corneal</li>
+            <li>Topografía corneal</li>
+            <li>Microscopía especular</li>
+            <li>AutoLensometro digital</li>
+            <li>IOL master</li>
+            <li>Ecometría</li>
+            <li>Campovisual Humphrey</li>
+          </ul>
         </div>
       </div>
     </main>
@@ -127,34 +125,26 @@
           </h2>
         </div>
         <div class="col-8 footer-rrss">
-          <div>
-            <a href="https://www.facebook.com/">
-              <img class="logo-rrss" src="./img/fb_logo.png" alt="fb_logo" />
-            </a>
-          </div>
-          <div>
-            <a href="https://www.instagram.com">
-              <img class="logo-rrss" src="./img/ig_logo.png" alt="ig_logo" />
-            </a>
-          </div>
-          <div>
-            <a href="https://www.youtube.com">
-              <img
-                class="logo-rrss"
-                src="./img/youtube_logo.png"
-                alt="ytube_logo"
-              />
-            </a>
-          </div>
-          <div>
-            <a href="https://www.whatsapp.com">
-              <img
-                class="logo-rrss"
-                src="./img/whatsapp_logo.png"
-                alt="whatsapp_logo"
-              />
-            </a>
-          </div>
+          <a href="https://www.facebook.com/">
+            <img class="logo-rrss" src="./img/fb_logo.png" alt="fb_logo" />
+          </a>
+          <a href="https://www.instagram.com">
+            <img class="logo-rrss" src="./img/ig_logo.png" alt="ig_logo" />
+          </a>
+          <a href="https://www.youtube.com">
+            <img
+              class="logo-rrss"
+              src="./img/youtube_logo.png"
+              alt="ytube_logo"
+            />
+          </a>
+          <a href="https://www.whatsapp.com">
+            <img
+              class="logo-rrss"
+              src="./img/whatsapp_logo.png"
+              alt="whatsapp_logo"
+            />
+          </a>
         </div>
       </div>
     </footer>
