--- a/nuestrocentro.html
+++ b/nuestrocentro.html
@@ -96,7 +96,8 @@
             Somos un centro de alta complejidad dedicados al diagnostico y
             tratamiento de patologías oftalmológicas.
           </h4>
-          <div class="col-12">
+        </div>
+        <div class="col-12">
           <h4>
             Tratamos patologías tales como: Miopía, Catarata, Opacificación
             Capsular, Astigmatismo, Hipermetropia, Presbicia, Chalazión,
@@ -116,59 +117,59 @@
             integral de agendamiento de turnos e historia clínica.
           </h4>
         </div>
-        </section>
       </div>
       <div class="row section2">
-      <div class="col-12">
-      <div
-        id="carouselExampleSlidesOnly"
-        class="carousel slide"
-        data-bs-ride="carousel"
-      >
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="./img/child.jpg" class="d-block w-100" alt="slide1" />
-          </div>
-          <div class="carousel-item">
-            <img src="./img/op.jpg" class="d-block w-100" alt="slide2" />
-          </div>
-          <div class="carousel-item">
-            <img src="./img/or.jpg" class="d-block w-100" alt="slide3" />
+        <div class="col-12 carousel--container">
+          <div
+            id="carouselExampleSlidesOnly"
+            class="carousel slide"
+            data-bs-ride="carousel"
+          >
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="./img/child.jpg" class="d-block w-100" alt="slide1" />
+              </div>
+              <div class="carousel-item">
+                <img src="./img/op.jpg" class="d-block w-100" alt="slide2" />
+              </div>
+              <div class="carousel-item">
+                <img src="./img/or.jpg" class="d-block w-100" alt="slide3" />
+              </div>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
     </main>
     <footer class="footer container-fluid">
       <div class="row footerRow">
-       <div class="col-2 footer-brand">
-        <a href="index.html">
-          <img class="logo-brand" src="./img/logo_transparente.png" alt="logo" />
-        </a>
-      </div>
-      <div class="col-2 footer-copywrite">
-        <h2>
-          © 2021 - Todos los derechos reservados. By Michelle Ticchetti.
-        </h2>
-      </div>
-      <div class=" col-8 footer-rrss">
-        <div>  
-        <a href="https://www.facebook.com/">
-            <img class="logo-rrss" src="./img/fb_logo.png" alt="fb_logo" />
+        <div class="col-2 footer-brand">
+          <a href="index.html">
+            <img
+              class="logo-brand"
+              src="./img/logo_transparente.png"
+              alt="logo"
+            />
           </a>
         </div>
-        <div> 
+        <div class="col-2 footer-copywrite">
+          <h2>
+            © 2021 - Todos los derechos reservados. By Michelle Ticchetti.
+          </h2>
+        </div>
+        <div class="col-8 footer-rrss">
+          <a href="https://www.facebook.com/">
+            <img class="logo-rrss" src="./img/fb_logo.png" alt="fb_logo" />
+          </a>
           <a href="https://www.instagram.com">
             <img class="logo-rrss" src="./img/ig_logo.png" alt="ig_logo" />
           </a>
-        </div>
-        <div> 
           <a href="https://www.youtube.com">
-            <img class="logo-rrss" src="./img/youtube_logo.png" alt="ytube_logo" />
+            <img
+              class="logo-rrss"
+              src="./img/youtube_logo.png"
+              alt="ytube_logo"
+            />
           </a>
-        </div>
-        <div> 
           <a href="https://www.whatsapp.com">
             <img
               class="logo-rrss"
@@ -177,9 +178,8 @@
             />
           </a>
         </div>
-        </div>
       </div>
-      </footer>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
