--- a/portal.html
+++ b/portal.html
@@ -91,9 +91,9 @@
     </header>
     <main class="container-fluid main">
       <div class="row">
-        <div class="col-12 section1">
-          <div class="form--container">
-            <form class="col-12 formulario">
+        <div class="section1">
+          <div class="col-lg-4 col-xs-12 form--container">
+            <form class="formulario">
               <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label"
                   >Usuario</label
