--- a/portal.html
+++ b/portal.html
@@ -92,7 +92,7 @@
     <main class="container-fluid main">
       <div class="row">
         <div class="section1">
-          <div class="col-lg-4 col-xs-12 form--container">
+          <div class="col-lg-4 col-md-6 col-xs-12 form--container">
             <form class="formulario">
               <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label"
