arreglo en footer

--- a/nuestrocentro.html
+++ b/nuestrocentro.html
@@ -142,7 +142,7 @@
     </main>
     <footer class="footer container-fluid">
       <div class="row footerRow">
-        <div class="col-2 footer-brand">
+        <div class="col-lg-2 col-xs-12 footer-brand">
           <a href="index.html">
             <img
               class="logo-brand"
@@ -151,12 +151,12 @@
             />
           </a>
         </div>
-        <div class="col-2 footer-copywrite">
+        <div class="col-lg-2 col-xs-12 footer-copywrite">
           <h2>
             © 2021 - Todos los derechos reservados. By Michelle Ticchetti.
           </h2>
         </div>
-        <div class="col-8 footer-rrss">
+        <div class="col-lg-8 col-xs-12 footer-rrss">
           <a href="https://www.facebook.com/">
             <img class="logo-rrss" src="./img/fb_logo.png" alt="fb_logo" />
           </a>
