--- a/index.html
+++ b/index.html
@@ -206,25 +206,33 @@
   </main>
   <footer class="footer container-fluid">
     <div class="row footerRow">
-     <div class="col-2 footer-brand">
-      <a href="index.html">
-        <img class="logo-brand" src="./img/logo_transparente.png" alt="logo" />
-      </a>
-    </div>
-    <div class="col-2 footer-copywrite">
-      <h2>
-        © 2021 - Todos los derechos reservados. By Michelle Ticchetti.
-      </h2>
-    </div>
-    <div class=" col-8 footer-rrss">  
-      <a href="https://www.facebook.com/">
+      <div class="col-lg-2 col-xs-12 footer-brand">
+        <a href="index.html">
+          <img
+            class="logo-brand"
+            src="./img/logo_transparente.png"
+            alt="logo"
+          />
+        </a>
+      </div>
+      <div class="col-lg-2 col-xs-12 footer-copywrite">
+        <h2>
+          © 2021 - Todos los derechos reservados. By Michelle Ticchetti.
+        </h2>
+      </div>
+      <div class="col-lg-8 col-xs-12 footer-rrss">
+        <a href="https://www.facebook.com/">
           <img class="logo-rrss" src="./img/fb_logo.png" alt="fb_logo" />
         </a>
         <a href="https://www.instagram.com">
           <img class="logo-rrss" src="./img/ig_logo.png" alt="ig_logo" />
         </a>
         <a href="https://www.youtube.com">
-          <img class="logo-rrss" src="./img/youtube_logo.png" alt="ytube_logo" />
+          <img
+            class="logo-rrss"
+            src="./img/youtube_logo.png"
+            alt="ytube_logo"
+          />
         </a>
         <a href="https://www.whatsapp.com">
           <img
@@ -235,7 +243,7 @@
         </a>
       </div>
     </div>
-    </footer>
+  </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
