solucionando problema con subida a github

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
       </nav>
   </header>
-  <main class="container-fluid">
+  <main class="container-fluid main">
       <section class="bgimage">
         <div class="container-fluid">
           <div class="row">
@@ -101,17 +101,17 @@
       </section>
       <a href="portal.html" class="btn btn-main">AGENDAR UN TURNO</a>
       <div class="row justify-content-between mt-5 ppage">
-        <div class="col-lg-4 col-md-4 col-xs-12 item">
+        <div class="col-lg-4 col-md-4 col-xs-12 ppage--item">
           <h2>CONTACTO</h2>
           <p>contacto@centino.com.ar</p>
           <p>11 4123-4567</p>
         </div>
-        <div class="col-lg-4 col-md-4 col-xs-12 item">
+        <div class="col-lg-4 col-md-4 col-xs-12 ppage--item">
           <h2>HORARIOS</h2>
           <p>de Lunes a Viernes</p>
           <p>de 8:30hs a 20:00hs</p>
         </div>
-        <div class="col-lg-4 col-md-4 col-xs-12 item">
+        <div class="col-lg-4 col-md-4 col-xs-12 ppage--item">
           <h2>UBICACIÓN</h2>
           <p>Calle Falsa 1234</p>
           <p>Ciudad Autónoma de Buenos Aires</p>
