--- a/cirugias.html
+++ b/cirugias.html
@@ -10,8 +10,7 @@
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./stylesheet/generalstyle.css" />
-    <link rel="stylesheet" href="./stylesheet/cirugias.css" />
+    <link rel="stylesheet" href="/styles/pages/main.css" />
     <title>CENTINO - Cirugías</title>
   </head>
   <body>
@@ -89,9 +88,9 @@
         </div>
       </nav>
     </header>
-    <main class="container-fluid main">
-      <div class="row justify-content-between sectionPpal">
-        <div class="col-lg-2 col-md-2 col-xs-12 text-center">
+    <main class="container-fluid mainCirugia">
+      <div class="row justify-content-between section1Cirugia">
+        <div class="col-lg-2 col-md-2 col-xs-12 section1Cirugia--cirugia">
           <h2>CIRUGÍAS REFRACTIVAS Y DE CATARATAS</h2>
           <ul class="text-center">
             <li>Cataratas</li>
@@ -100,7 +99,7 @@
             <li>ICL</li>
           </ul>
         </div>
-        <div class="col-lg-2 col-md-2 col-xs-12 text-center">
+        <div class="col-lg-2 col-md-2 col-xs-12 section1Cirugia--cirugia">
           <h2>CIRUGÍAS DE CÓRNEA</h2>
           <ul>
             <li>Anillos intraestromales</li>
@@ -112,14 +111,14 @@
             <li>Queratoplastia penetrante</li>
           </ul>
         </div>
-        <div class="col-lg-2 col-md-2 col-xs-12 text-center">
+        <div class="col-lg-2 col-md-2 col-xs-12 section1Cirugia--cirugia">
           <h2>CIRUGÍAS DE GLAUCOMA</h2>
           <ul>
             <li>Trabeculectomía</li>
             <li>Iridectomía con Yag láser</li>
           </ul>
         </div>
-        <div class="col-lg-2 col-md-2 col-xs-12 text-center">
+        <div class="col-lg-2 col-md-2 col-xs-12 section1Cirugia--cirugia">
           <h2>CIRUGÍAS DE RETINA</h2>
           <ul>
             <li>Vitrectomía</li>
@@ -130,7 +129,7 @@
             <li>Aplicaciones intravítreas de antiangionénicos</li>
           </ul>
         </div>
-        <div class="col-lg-2 col-md-2 col-xs-12 text-center">
+        <div class="col-lg-2 col-md-2 col-xs-12 section1Cirugia--cirugia">
           <h2>CIRUGÍAS PLÁSTICAS</h2>
           <ul>
             <li>Ectropión</li>
@@ -142,7 +141,7 @@
             <li>Biopsias conjuntivales</li>
           </ul>
         </div>
-        <div class="col-lg-2 col-md-2 col-xs-12 text-center">
+        <div class="col-lg-2 col-md-2 col-xs-12 section1Cirugia--cirugia">
           <h2>OTROS PROCEDIMIENTOS</h2>
           <ul>
             <li>Estrabismo</li>
@@ -156,7 +155,7 @@
         </div>
       </div>
     </main>
-    <section class="banner"></section>
+    <section class="bannerCirugia"></section>
     <footer class="footer container-fluid">
       <div class="row footerRow">
         <div class="col-lg-2 col-xs-12 footer-brand">
