--- a/estudios.html
+++ b/estudios.html
@@ -10,8 +10,7 @@
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./stylesheet/generalstyle.css" />
-    <link rel="stylesheet" href="./stylesheet/estudios.css" />
+    <link rel="stylesheet" href="/styles/pages/main.css" />
     <title>CENTINO - Cirugías</title>
   </head>
   <body>
@@ -89,11 +88,11 @@
         </div>
       </nav>
     </header>
-    <main class="container-fluid main">
-      <div class="row justify-content-between sectionPpal">
-        <div class="col-lg-2 col-md-2 col-xs-12 text-center">
+    <main class="container-fluid mainEstudio">
+      <div class="row justify-content-between">
+        <div class="col-lg-2 col-md-2 col-xs-12">
           <h2>Estudios</h2>
-          <ul class="text-center">
+          <ul class="mainEstudio--lista">
             <li>OCT</li>
             <li>UBM</li>
             <li>Paquimetría corneal</li>
@@ -107,7 +106,7 @@
         </div>
       </div>
     </main>
-    <section class="banner"></section>
+    <section class="bannerEstudio"></section>
     <footer class="footer container-fluid">
       <div class="row footerRow">
         <div class="col-lg-2 col-xs-12 footer-brand">
