--- a/portal.html
+++ b/portal.html
@@ -10,8 +10,7 @@
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./stylesheet/generalstyle.css" />
-    <link rel="stylesheet" href="./stylesheet/portal.css" />
+    <link rel="stylesheet" href="/styles/pages/main.css" />
     <title>CENTINO - Nuestro Centro</title>
   </head>
   <body>
@@ -89,7 +88,7 @@
         </div>
       </nav>
     </header>
-    <main class="container-fluid main">
+    <main class="container-fluid mainPortal">
       <div class="row">
         <div class="section1">
           <div class="col-lg-4 col-md-6 col-xs-12 form--container">
@@ -127,7 +126,7 @@
                 >
               </div>
               <button type="submit" class="btn btn-primary">Ingresar</button>
-              <div class="form--forgetPass">
+              <div class="forgetPass">
                 <h3>¿Olvidaste la contraseña?</h3>
                 <h3>¿No tenés una cuenta? Registrate</h3>
               </div>
