--- a/especialidades.html
+++ b/especialidades.html
@@ -10,8 +10,7 @@
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./stylesheet/generalstyle.css" />
-    <link rel="stylesheet" href="./stylesheet/especialidades.css" />
+    <link rel="stylesheet" href="/styles/pages/main.css" />
     <title>CENTINO - Especialidades</title>
   </head>
   <body>
@@ -89,7 +88,7 @@
         </div>
       </nav>
     </header>
-    <main class="container-fluid main">
+    <main class="container-fluid mainEspecialidad">
       <div class="row section1">
         <div class="col-12 especialidad">
           <h2>RETINA</h2>
