--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
         </div>
       </nav>
   </header>
-  <main class="container-fluid main">
-      <section class="bgimage">
+  <main class="container-fluid mainIndex">
+      <section class="bgimageIndex">
         <div class="container-fluid">
           <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -125,7 +125,7 @@
           ></iframe>
         </div>
       </div>
-      <div class="row justify-content-center mt-5 bpage">
+      <div class="row justify-content-center mt-5 bpageIndex">
         <div class="col-12 container-form">
           <form action="#" class="form">
             <legend class="legend-form mt-5 mb-5">
