agrego punto antes de la primer barra en la ruta del css para que deje de romper en github

--- a/especialidades.html
+++ b/especialidades.html
@@ -10,7 +10,7 @@
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/styles/pages/main.css" />
+    <link rel="stylesheet" href="./styles/pages/main.css" />
     <title>CENTINO - Especialidades</title>
   </head>
   <body>
