mejorando diseño de la pagina nuestro centro y algunos iconos en gral

--- a/especialidades.html
+++ b/especialidades.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="CENTINO, Centro Integral de Oftalmología, cuenta con todas las subespecialidades oftalmológicas: retina, glaucoma, córnea, estrabismo, superficie ocular, neurooftalmología, y más!"
+    />
+    <meta
+      name="keywords"
+      content="OFTALMOLOGO, OFTALMOLOGA, OFTALMOLOGIA, OCULISTA, CATARATAS, RETINA, ANTEOJOS, VISTA, OJO, OJOS"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,12 +22,12 @@
     <title>CENTINO - Especialidades</title>
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="index.html">
           <img
             class="logo-brand"
-            src="./img/logo_transparente.png"
+            src="./img/Black on Transparent.png"
             alt="logo"
           />
         </a>
@@ -89,135 +97,135 @@
       </nav>
     </header>
     <main class="container-fluid mainEspecialidad">
-      <div class="row section1">
-        <div class="col-12 especialidad">
+      <div class="row especialidad">
+        <div class="col-12 especialidad--color">
           <h2>RETINA</h2>
           <div>
-            <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+            <h5><img src="./img/doctor.png" alt="foto_doctor" /></h5>
             <h3>Dr/Dra. APELLIDO, Nombre</h3>
             <h4>Lunes y Martes</h4>
             <h5><a href="portal.html">Enviar Mensaje</a></h5>
           </div>
           <div>
-            <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+            <h5><img src="./img/doctora.png" alt="foto_doctor" /></h5>
             <h3>Dr/Dra. APELLIDO, Nombre</h3>
             <h4>Miércoles y Jueves</h4>
             <h5><a href="portal.html">Enviar Mensaje</a></h5>
           </div>
           <div>
-            <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+            <h5><img src="./img/doctor.png" alt="foto_doctor" /></h5>
             <h3>Dr/Dra. APELLIDO, Nombre</h3>
             <h4>Viernes</h4>
             <h5><a href="portal.html">Enviar Mensaje</a></h5>
           </div>
         </div>
       </div>
-      <div class="row section1">
-        <div class="col-12 especialidad">
+      <div class="row especialidad">
+        <div class="col-12">
           <h2>GLAUCOMA</h2>
           <div>
-            <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+            <h5><img src="./img/doctora.png" alt="foto_doctor" /></h5>
             <h3>Dr/Dra. APELLIDO, Nombre</h3>
             <h4>Lunes y Martes</h4>
             <h5><a href="portal.html">Enviar Mensaje</a></h5>
           </div>
           <div>
-            <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+            <h5><img src="./img/doctor.png" alt="foto_doctor" /></h5>
             <h3>Dr/Dra. APELLIDO, Nombre</h3>
             <h4>Miércoles y Jueves</h4>
             <h5><a href="portal.html">Enviar Mensaje</a></h5>
           </div>
         </div>
       </div>
-      <div class="row section1">
-        <div class="col-12 especialidad">
+      <div class="row especialidad">
+        <div class="col-12 especialidad--color">
           <h2>CÓRNEA Y CATARATAS</h2>
           <div>
-            <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+            <h5><img src="./img/doctor.png" alt="foto_doctor" /></h5>
             <h3>Dr/Dra. APELLIDO, Nombre</h3>
             <h4>Miércoles y Jueves</h4>
             <h5><a href="portal.html">Enviar Mensaje</a></h5>
           </div>
           <div>
-            <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+            <h5><img src="./img/doctora.png" alt="foto_doctor" /></h5>
             <h3>Dr/Dra. APELLIDO, Nombre</h3>
             <h4>Viernes</h4>
             <h5><a href="portal.html">Enviar Mensaje</a></h5>
           </div>
         </div>
       </div>
-      <div class="row section1">
-        <div class="col-12 especialidad">
+      <div class="row especialidad">
+        <div class="col-12">
           <h2>UVEÍTIS</h2>
           <div>
-            <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+            <h5><img src="./img/doctor.png" alt="foto_doctor" /></h5>
             <h3>Dr/Dra. APELLIDO, Nombre</h3>
             <h4>Viernes</h4>
             <h5><a href="portal.html">Enviar Mensaje</a></h5>
           </div>
         </div>
       </div>
-      <div class="row section1">
-        <div class="col-12 especialidad">
+      <div class="row especialidad">
+        <div class="col-12 especialidad--color">
           <h2>SUPERFICIE OCULAR</h2>
           <div>
-            <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+            <h5><img src="./img/doctor.png" alt="foto_doctor" /></h5>
             <h3>Dr/Dra. APELLIDO, Nombre</h3>
             <h4>Lunes y Martes</h4>
             <h5><a href="portal.html">Enviar Mensaje</a></h5>
           </div>
           <div>
-            <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+            <h5><img src="./img/doctora.png" alt="foto_doctor" /></h5>
             <h3>Dr/Dra. APELLIDO, Nombre</h3>
             <h4>Miércoles y Jueves</h4>
             <h5><a href="portal.html">Enviar Mensaje</a></h5>
           </div>
           <div>
-            <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+            <h5><img src="./img/doctor.png" alt="foto_doctor" /></h5>
             <h3>Dr/Dra. APELLIDO, Nombre</h3>
             <h4>Viernes</h4>
             <h5><a href="portal.html">Enviar Mensaje</a></h5>
           </div>
         </div>
       </div>
-      <div class="row section1">
-        <div class="col-12 especialidad">
+      <div class="row especialidad">
+        <div class="col-12">
           <h2>ESTRABISMO</h2>
           <div>
-            <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+            <h5><img src="./img/doctora.png" alt="foto_doctor" /></h5>
             <h3>Dr/Dra. APELLIDO, Nombre</h3>
             <h4>Lunes y Martes</h4>
             <h5><a href="portal.html">Enviar Mensaje</a></h5>
           </div>
         </div>
       </div>
-      <div class="row section1">
-        <div class="col-12 especialidad">
+      <div class="row especialidad especialidad--color">
+        <div class="col-12">
           <h2>VÍAS LAGRIMALES Y PLÁSTICA OCULAR</h2>
           <div>
-            <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+            <h5><img src="./img/doctora.png" alt="foto_doctor" /></h5>
             <h3>Dr/Dra. APELLIDO, Nombre</h3>
             <h4>Lunes y Martes</h4>
             <h5><a href="portal.html">Enviar Mensaje</a></h5>
           </div>
         </div>
       </div>
-      <div class="row section1">
-        <div class="col-12 especialidad">
+      <div class="row especialidad">
+        <div class="col-12">
           <h2>NEUROOFTALMOLOGÍA</h2>
           <div>
-            <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+            <h5><img src="./img/doctora.png" alt="foto_doctor" /></h5>
             <h3>Dr/Dra. APELLIDO, Nombre</h3>
             <h4>Lunes y Miércoles</h4>
             <h5><a href="portal.html">Enviar Mensaje</a></h5>
           </div>
         </div>
       </div>
-      <div class="row section1">
-        <div class="col-12 especialidad">
+      <div class="row especialidad especialidad--color">
+        <div class="col-12">
           <h2>BAJA VISIÓN</h2>
           <div>
-            <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+            <h5><img src="./img/doctor.png" alt="foto_doctor" /></h5>
             <h3>Dr/Dra. APELLIDO, Nombre</h3>
             <h4>Lunes y Miércoles</h4>
             <h5><a href="portal.html">Enviar Mensaje</a></h5>
@@ -231,7 +239,7 @@
           <a href="index.html">
             <img
               class="logo-brand"
-              src="./img/logo_transparente.png"
+              src="./img/Black on Transparent.png"
               alt="logo"
             />
           </a>
@@ -243,22 +251,23 @@
         </div>
         <div class="col-lg-8 col-xs-12 footer-rrss">
           <a href="https://www.facebook.com/">
-            <img class="logo-rrss" src="./img/fb_logo.png" alt="fb_logo" />
-          </a>
-          <a href="https://www.instagram.com">
-            <img class="logo-rrss" src="./img/ig_logo.png" alt="ig_logo" />
-          </a>
-          <a href="https://www.youtube.com">
             <img
               class="logo-rrss"
-              src="./img/youtube_logo.png"
-              alt="ytube_logo"
+              src="./img/logo-de-facebook.png"
+              alt="fb_logo"
+            />
+          </a>
+          <a href="https://www.instagram.com">
+            <img
+              class="logo-rrss"
+              src="./img/logotipo-de-instagram.png"
+              alt="ig_logo"
             />
           </a>
           <a href="https://www.whatsapp.com">
             <img
               class="logo-rrss"
-              src="./img/whatsapp_logo.png"
+              src="./img/logotipo-de-whatsapp.png"
               alt="whatsapp_logo"
             />
           </a>
