--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="CENTINO, Centro Integral de Oftalmología ubicado en la provincia de Buenos Aires, Argentina. Agende su turno con un especialista.">
+    <meta name="keywords" content="OFTALMOLOGO, OFTALMOLOGA, OFTALMOLOGIA, OCULISTA, CATARATAS, RETINA, ANTEOJOS, VISTA, OJO, OJOS">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,12 +16,12 @@
     <title>CENTINO - Inicio</title>
   </head>
   <body>
-  <header>
+  <header class="header">
       <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="index.html">
           <img
             class="logo-brand"
-            src="./img/logo_transparente.png"
+            src="./img/Black on Transparent.png"
             alt="logo"
           />
         </a>
@@ -89,17 +91,23 @@
       </nav>
   </header>
   <main class="container-fluid mainIndex">
-      <section class="bgimageIndex">
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+          <div class="row bgimageIndex">
+            <div class="col-12 welcome">
               <h5>Bienvenidos a CentInO</h5>
               <p>Centro Integral Oftalmológico de alta complejidad para la salud visual</p>
             </div>
           </div>
+          <div class="row">
+            <div class="col-12 welcome">
+      <a href="portal.html" class="btn btn-main">AGENDAR UN TURNO <img
+        class="agendar un turno"
+        src="./img/calendario.png"
+        alt="ytube_logo"
+        width="50px",
+        height="50px",
+      /> </a>
+          </div>
         </div>
-      </section>
-      <a href="portal.html" class="btn btn-main">AGENDAR UN TURNO</a>
       <div class="row justify-content-between mt-5 ppage">
         <div class="col-lg-4 col-md-4 col-xs-12 ppage--item">
           <h2>CONTACTO</h2>
@@ -129,7 +137,7 @@
         <div class="col-12 container-form">
           <form action="#" class="form">
             <legend class="legend-form mt-5 mb-5">
-              Escriba Aqui su consulta. En breve estaremos respondiéndole!
+              Escriba aquí su consulta. ¡En breve estaremos respondiéndole!
             </legend>
           <div class="form-container">
             <div class="mb-3">
@@ -209,7 +217,7 @@
         <a href="index.html">
           <img
             class="logo-brand"
-            src="./img/logo_transparente.png"
+            src="./img/Black on Transparent.png"
             alt="logo"
           />
         </a>
@@ -221,22 +229,15 @@
       </div>
       <div class="col-lg-8 col-xs-12 footer-rrss">
         <a href="https://www.facebook.com/">
-          <img class="logo-rrss" src="./img/fb_logo.png" alt="fb_logo" />
+          <img class="logo-rrss" src="./img/logo-de-facebook.png" alt="fb_logo" />
         </a>
         <a href="https://www.instagram.com">
-          <img class="logo-rrss" src="./img/ig_logo.png" alt="ig_logo" />
-        </a>
-        <a href="https://www.youtube.com">
-          <img
-            class="logo-rrss"
-            src="./img/youtube_logo.png"
-            alt="ytube_logo"
-          />
+          <img class="logo-rrss" src="./img/logotipo-de-instagram.png" alt="ig_logo" />
         </a>
         <a href="https://www.whatsapp.com">
           <img
             class="logo-rrss"
-            src="./img/whatsapp_logo.png"
+            src="./img/logotipo-de-whatsapp.png"
             alt="whatsapp_logo"
           />
         </a>
