--- a/portal.html
+++ b/portal.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="CENTINO, Centro Integral de Oftalmología. Ingrese a su historia clínica y agende sus turnos y estudios. Utilice el portal para comunicarse con el especialista. "
+    />
+    <meta
+      name="keywords"
+      content="OFTALMOLOGO, OFTALMOLOGA, OFTALMOLOGIA, OCULISTA, CATARATAS, RETINA, ANTEOJOS, VISTA, OJO, OJOS"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,12 +22,12 @@
     <title>CENTINO - Nuestro Centro</title>
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="index.html">
           <img
             class="logo-brand"
-            src="./img/logo_transparente.png"
+            src="./img/Black on Transparent.png"
             alt="logo"
           />
         </a>
@@ -135,13 +143,13 @@
         </div>
       </div>
     </main>
-    <footer class="footer container-fluid">
+    <footer class="container-fluid footer">
       <div class="row footerRow">
         <div class="col-lg-2 col-xs-12 footer-brand">
           <a href="index.html">
             <img
               class="logo-brand"
-              src="./img/logo_transparente.png"
+              src="./img/Black on Transparent.png"
               alt="logo"
             />
           </a>
@@ -153,22 +161,23 @@
         </div>
         <div class="col-lg-8 col-xs-12 footer-rrss">
           <a href="https://www.facebook.com/">
-            <img class="logo-rrss" src="./img/fb_logo.png" alt="fb_logo" />
-          </a>
-          <a href="https://www.instagram.com">
-            <img class="logo-rrss" src="./img/ig_logo.png" alt="ig_logo" />
-          </a>
-          <a href="https://www.youtube.com">
             <img
               class="logo-rrss"
-              src="./img/youtube_logo.png"
-              alt="ytube_logo"
+              src="./img/logo-de-facebook.png"
+              alt="fb_logo"
+            />
+          </a>
+          <a href="https://www.instagram.com">
+            <img
+              class="logo-rrss"
+              src="./img/logotipo-de-instagram.png"
+              alt="ig_logo"
             />
           </a>
           <a href="https://www.whatsapp.com">
             <img
               class="logo-rrss"
-              src="./img/whatsapp_logo.png"
+              src="./img/logotipo-de-whatsapp.png"
               alt="whatsapp_logo"
             />
           </a>
